<resources>
    <string name="app_name">WenwoAndroid</string>
    <string name="title_activity_splash">SplashActivity</string>

    <item type="id" name="auto_focus"/>
    <item type="id" name="decode"/>
    <item type="id" name="decode_failed"/>
    <item type="id" name="decode_succeeded"/>
    <item type="id" name="launch_product_query"/>
    <item type="id" name="quit"/>
    <item type="id" name="restart_preview"/>
    <item type="id" name="return_scan_result"/>
    <item type="id" name="search_book_contents_failed"/>
    <item type="id" name="search_book_contents_succeeded"/>

    <string name="SK_DEVELOPMENT_KEY">5bd485bf-8e57-34ad-85e4-adbcf365c188</string>

    <string name="google_maps_key" translatable="false" templateMergeStrategy="preserve">
        AIzaSyDz-CkqmcERYbe38wMp1CcBrTRUyfTG5d4
    </string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="wechat_login" >WeChat With Login</string>
    <string name="email_login" >Email Login</string>
    <string name="title_activity_login">Sign in</string>
    <string name="signup_email" >Sign up with Email →</string>
    <string name="find_password" >Find my passord</string>
    <string name="input_email_hint">youremail@example.com</string>
    <string name="find_password_explain">비밀번호 변경을 위해 서비스에 등록한 이메일 주소를 입력해주세요</string>
    <string name="certify_email_explain">Email login</string>
    <string name="button_certify_email">이메일 인증하기</string>
    <string name="button_sign_up">Sign UP</string>
    <string name="btn_man">남자</string>
    <string name="btn_woman">여자</string>
    <string name="btn_check_overlab">중복 확인</string>
    <string name="input_nickname">NickName</string>
    <string name="password_confirm">Confirm password</string>
    <string name="text_year">년</string>
    <string name="text_month">월</string>
    <string name="text_day">일</string>


    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Login</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="title_activity_home">HomeActivity</string>
    <string name="title_activity_question">QuestionActivity</string>
    <string name="title_activity_friend_question">FriendQuestion</string>
    <string name="question_closing_time">질문 마감 시간</string>
    <string name="my_seed_count">보유 해바라기씨</string>
    <string name="nickname_open">닉네임 공개 범위</string>
    <string name="location_question">내 위치 기반 질문</string>
    <string name="directory">디렉토리</string>
    <string name="seeds_simgi">해바라기씨 심기</string>
    <string name="register_time">후 까지</string>
    <string name="directory_default">없음</string>
    <string name="seeds">seeds</string>
    <string name="recommend_seeds">추천 해바라기씨보다 낮을 경우 답변이 원활히 이루어지지 않을수도 있습니다</string>
    <string name="real_recommens">추천 해바라기씨</string>
    <string name="register_question">새로운 질문을 등록해 주세요</string>
    <string name="discover_qr">QR Code Scan</string>
    <string name="discover_map">지도</string>
    <string name="discover_hwanyual">환율 정보</string>
    <string name="discover_weather">날씨 정보</string>
    <string name="discover_logout">로그아웃</string>
    <string name="sunflower">Sunflower Seed Statation</string>
    <string name="myseeds">보유 해바라기씨</string>
</resources>
