<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#1E1E46"
    tools:context="com.wenwo.wenwoandroid.join.JoinActivity"
    android:orientation="vertical">

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/iv_join_choice"
        android:src="@drawable/header_cancel_28x28"
        android:layout_marginTop="30dp"
        android:layout_marginLeft="27dp"
        android:visibility="invisible" />

    <com.github.siyamed.shapeimageview.CircularImageView
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:onClick="onSetProfile"
        android:src="@drawable/login_profilephoto_64x64"
        android:id="@+id/iv_join_profile"
        android:layout_marginTop="36dp"
        android:layout_gravity="center_horizontal" />

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal">
        <RadioGroup
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/check_enable"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:orientation="horizontal"
            android:id="@+id/radio_group"
            android:layout_marginTop="30dp">

            <RadioButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/radio_man"
                android:button="@drawable/choice_sex"
                android:layout_below="@+id/check_enable"
                android:layout_toLeftOf="@+id/text_message"
                android:layout_toStartOf="@+id/text_message"
                android:checked="true"
                android:layout_marginRight="30dp" />

            <RadioButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:button="@drawable/choice_sex1"
                android:id="@+id/radio_woman"
                android:layout_below="@+id/check_enable"
                android:layout_toRightOf="@+id/radio_r1"
                android:layout_toEndOf="@+id/radio_r1"
                android:checked="false" />
        </RadioGroup>
    </LinearLayout>

    <RelativeLayout
        android:orientation="horizontal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="22dp">
        <android.support.design.widget.TextInputLayout android:layout_width="210dp"
            android:layout_height="wrap_content"
            android:id="@+id/editText5"
            android:layout_gravity="center">
            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/input_nickname"
                android:maxLines="1"
                android:singleLine="true"
                android:textColor="#ffffff"
                android:hint="@string/input_nickname"
                android:layout_alignParentTop="true"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true"
                android:textColorHint="#646464"
                android:textSize="14sp" />
        </android.support.design.widget.TextInputLayout>

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            style="@style/button"
            android:text="@string/btn_check_overlab"
            android:id="@+id/btn_nickname_check"
            android:layout_alignParentTop="true"
            android:layout_toRightOf="@+id/editText5"
            android:layout_toEndOf="@+id/editText5"
            android:layout_centerInParent="true"
            android:layout_gravity="right" />

    </RelativeLayout>

    <android.support.design.widget.TextInputLayout android:layout_width="278dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="8dp">
        <EditText
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:id="@+id/join_edit_password"
            android:inputType="textPassword"
            android:maxLines="1"
            android:textColor="#ffffff"
            android:singleLine="true"
            android:hint="@string/prompt_password"
            android:layout_gravity="center_horizontal"
            android:textSize="14sp" />
    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout android:layout_width="278dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="8dp">
        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPassword"
            android:maxLines="1"
            android:singleLine="true"
            android:textColor="#ffffff"
            android:hint="@string/password_confirm"
            android:id="@+id/join_edit_password_one"
            android:layout_gravity="center_horizontal"
            android:textSize="14sp" />
    </android.support.design.widget.TextInputLayout>

    <LinearLayout
        android:layout_width="270dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:orientation="horizontal"
        android:onClick="onSetBirthday"
        android:weightSum="1"
        android:layout_marginTop="20dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/textView12"
            android:layout_weight="0.46" />

        <TextView
            android:layout_width="8dp"
            android:layout_height="wrap_content"
            android:id="@+id/tv_birthday_year"
            android:layout_weight="0.2"
            android:layout_gravity="center"
            android:gravity="center"
            android:textColor="#ffffff"
            android:textSize="16sp"
            android:textAlignment="textEnd" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/text_year"
            android:layout_weight="0.05"
            android:id="@+id/text_year"
            android:textColor="#ffffff"
            android:textSize="16sp"
            android:gravity="right"
            android:textAlignment="center" />

        <TextView
            android:layout_width="5dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.11"
            android:id="@+id/tv_birthday_month"
            android:gravity="center"
            android:textColor="#ffffff"
            android:textSize="16sp"
            android:textAlignment="textEnd" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/text_month"
            android:layout_weight="0.05"
            android:id="@+id/text_month"
            android:textColor="#ffffff"
            android:textSize="16sp"
            android:gravity="right"
            android:textAlignment="center" />

        <TextView
            android:layout_width="5dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.1"
            android:id="@+id/tv_birthday_day"
            android:textColor="#ffffff"
            android:textSize="16sp"
            android:gravity="center"
            android:textAlignment="textEnd" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="0.03"
            android:text="@string/text_day"
            android:id="@+id/text_day"
            android:textSize="16sp"
            android:textColor="#ffffff"
            android:gravity="right"
            android:textAlignment="viewEnd" />
    </LinearLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="270dp"
        android:layout_height="1dp"
        android:layout_gravity="center_horizontal"
        android:background="#ffffff"
        android:layout_marginTop="4dp"></LinearLayout>

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/btn_sign_up"
        android:layout_gravity="center_horizontal"
        android:src="@drawable/signup"
        android:layout_marginTop="33dp" />

</LinearLayout>
