<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:gravity="center_horizontal"
    android:orientation="vertical"
    android:background="#1E1E46"
    tools:context="com.wenwo.wenwoandroid.login.EmailLoginActivity">

    <!-- ModuleUser progress -->
    <ProgressBar android:id="@+id/login_progress" style="?android:attr/progressBarStyleLarge"
        android:layout_width="wrap_content" android:layout_height="wrap_content"
        android:layout_marginBottom="8dp" android:visibility="gone" />

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/iv_login_close"
        android:src="@drawable/header_cancel_28x28"
        android:layout_marginTop="30dp"
        android:layout_gravity="left"
        android:layout_marginLeft="27dp"
        android:visibility="invisible" />

    <LinearLayout android:id="@+id/email_login_form" android:layout_width="match_parent"
        android:layout_height="wrap_content" android:orientation="vertical"
        android:layout_marginTop="64dp">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/imageView19"
            android:src="@drawable/bi_login"
            android:layout_gravity="center_horizontal"
            android:layout_marginBottom="67dp" />

        <android.support.design.widget.TextInputLayout android:layout_width="280dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center">

            <AutoCompleteTextView android:id="@+id/et_sign_in_email" android:layout_width="match_parent"
                android:layout_height="wrap_content" android:hint="@string/prompt_email"
                android:textColorHint="#969696"
                android:inputType="textEmailAddress" android:maxLines="1"
                android:singleLine="true"
                android:textColor="#ffffff"
                android:textSize="14sp"
                android:text="\@naver.com" />

        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout android:layout_width="280dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center">

            <EditText android:id="@+id/et_sign_in_password" android:layout_width="match_parent"
                android:layout_height="wrap_content" android:hint="@string/prompt_password"
                android:imeActionId="@+id/login"
                android:textColorHint="#969696"
                android:textColor="#ffffff"
                android:imeActionLabel="@string/action_sign_in_short"
                android:imeOptions="actionUnspecified" android:inputType="textPassword"
                android:maxLines="1" android:singleLine="true"
                android:textSize="14sp" />

        </android.support.design.widget.TextInputLayout>

        <ImageView android:id="@+id/email_sign_in_button" style="@style/button"
            android:layout_width="270dp" android:layout_height="40dp"
            android:layout_marginTop="40dp"
            android:layout_gravity="center"
            android:onClick="onSignInEmail"
            android:background="@drawable/login" />

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/text_find_password"
            android:layout_gravity="center_horizontal"
            android:onClick="onFindPassword"
            android:layout_marginTop="19dp"
            android:src="@drawable/findmypassword" />

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/text_signup_email"
            android:layout_gravity="center_horizontal"
            android:onClick="onSignupEmail"
            android:layout_marginTop="50dp"
            android:src="@drawable/signupemail" />


    </LinearLayout>

    <ScrollView android:id="@+id/login_form" android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp">

    </ScrollView>

</LinearLayout>
